--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
+    "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.72.3",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
