--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
+    "babel-preset-react-app": "^10.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-native": "^0.72.3",
-    "react-native-calendars": "^1.1300.0",
+    "react-native-icons": "^0.7.1",
+    "react-native-web": "^0.19.7",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
@@ -42,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react": "^18.2.18",
+    "@types/react-native": "^0.72.2",
+    "react-native-calendars": "^1.1300.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
