--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "to-my-diary_front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://172.16.101.2:8080",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
