--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-native": "^0.72.3",
