--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
+    "react-color": "^2.19.3",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-native": "^0.72.3",
     "react-native-icons": "^0.7.1",
     "react-native-web": "^0.19.7",
