--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "babel-preset-react-app": "^10.0.1",
+    "bootstrap": "^5.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
