--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
     "react-color": "^2.19.3",
+    "react-cookie": "^6.1.1",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
