--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "swiper": "^10.3.0",
+    "react-swiper": "^0.1.5",
+    "sass": "^1.69.5",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
